# aqd

./: .gitignore  CHATGPT_RESEARCH.md  CLAUDE.md  DUCKDB_CHANGES.md  Dockerfile  EXPERIMENTAL_REPORT.md  FINAL_WARMUP_SOLUTION_REPORT.md  GNN_KERNEL_LOGGING.md  INTERACTION.md  Makefile  Makefile.rginn  PLAN.md  PLAN_LOGGING.md  POSTGRES_SCANNER_GUIDE.md  README.md  REPRODUCE.md  ROUTING_BENCHMARK_REPORT.md  VERIFICATION_REPORT.md  _tinylr.txt  advanced_aqd_system.py  analyze_high_scale.py  analyze_results.py  analyze_routing_results.py  aqd_benchmark_pipeline.py  aqd_config.yaml  aqd_cost_router.py  aqd_feature_logger.c  aqd_feature_logger.h  aqd_gnn_model.cpp  aqd_integration.patch  aqd_ml_router.py  aqd_query_router.c  aqd_query_router.h  bench_routing_modes.py  bench_routing_modes_grok.py  benchmark_dispatch_modes.py  benchmark_results.csv  benchmark_results.json  benchmark_routing_methods.py  benchmark_runner.py  (+303 more)
backup/: random_forest_model.cpp
binary_classification/: Makefile  all_mode_results.csv  common.hpp  cpu_meter.cpp  fannmlp_model.cpp  main.cpp  router  test_metrics.csv  vib.hpp
data/: zsce_training_data_20250907_153936.json  zsce_training_data_20250907_154000.json  zsce_training_data_20250907_154000_enhanced.json
dual_execution_data/: Airline.json  Airline_summary.json  Carcinogenesis.json  Carcinogenesis_summary.json  Credit.json  Credit_summary.json  financial.json  financial_summary.json  tpcds_sf1.json  tpcds_sf1_summary.json  tpch_sf1.json  tpch_sf1_summary.json
duckdb_src/src/main/query_router/: CMakeLists.txt  duckdb_executor.cpp  lightgbm_router.cpp  postgresql_executor.cpp  query_router.cpp
lightgbm_models/: feature_importance.csv  lightgbm_routing_model.txt  lightgbm_routing_model_info.json  lightgbm_routing_model_simplified.txt  lightgbm_routing_model_summary.json
lightgbm_training_data/: Airline_features.csv  Carcinogenesis_features.csv  Credit_features.csv  Hepatitis_std_features.csv  employee_features.csv  financial_features.csv  geneea_features.csv  tpcds_sf1_features.csv  (+1 more)
src/: CMakeLists.txt  bench_routing_modes_explain_first.py  benchmark_queries.py  benchmark_tpch.py  build.sh  check_rl_learning.py  combined_benchmark.py  common.cpp  compare_concurrency  compare_concurrency.cpp  compare_concurrency.py  compile_compare_concurrency.sh  main.cpp  metrics_full_vs_fixed32.tex  mk_lgbm_header.py  monitor_lightgbm_dynamic.py  monitor_rl_log_4.py  monitor_row_col_proc_stats.sh  new_benchmark2.py  pd_dispatcher.h  shap_analysis.py  warmup_rl.py
src/binary_classification/: common.cpp  global_stats.cpp  test_metrics.csv
src/binary_classification/include/: common.hpp
src/binary_classification/zsce/cross_db_benchmark/datasets/tpcds_sf10/: column_statistics.json
src/binary_classification/zsce/cross_db_benchmark/datasets/tpcds_sf100/: string_statistics.json
src/binary_classification/zsce/cross_db_benchmark/datasets/tpch_sf10/: column_statistics.json
src/include/duckdb/main/: lightgbm_router.hpp
src/main/query_router/: lightgbm_router.cpp
src/postprocessing/: calc_method_accuracy_by_gap.py
src/preprocessing/: AP_heavy_runner.py  TP_heavy_runner.py  alter_columnar.py  collect_query_costs_AP_heavy.py  collect_query_costs_tpcds_sf1_templates.py  copy_data.py
src/time_regression/: Makefile  cpu_meter.h  main.cpp
src/time_regression/zsce/cross_db_benchmark/datasets/tpch_sf100/: schema.json  string_statistics.json
src/zsce/cross_db_benchmark/datasets/hybench_sf1/: column_statistics.json
(+145 files in other folders)
